fixed problem with overflow in large input titles

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -10,6 +10,9 @@ p, h1, h2, h3, h4, h5, h6, a, input, textarea {
 
 h1, h2, h3 {
     font-weight: 100;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 a {
